--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>fetch</title>
+    <title>featch</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div id="preloader" class="visible"></div>
    <script src="script.js"></script>
   </body>
 </html>
